--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 pyyaml==5.2
-lime==0.1.1.37
-tensorflow_gpu==2.0.1
-joblib==0.14.1
-kmodes==0.10.2
-imbalanced_learn==0.6.1
-tensorboard==2.0.2
-dill==0.3.0
-tqdm==4.40.2
-pandas==0.25.3
-matplotlib==3.1.1
-numpy==1.17.4
+scikit-learn==0.22.1
 scipy==1.4.1
+tensorboard==2.1.1
+tensorflow_gpu==2.1.0
+joblib==0.14.1
+pandas==0.25.3
+imbalanced_learn==0.6.1
+matplotlib==3.1.1
+lime==0.1.1.37
+dill==0.3.0
 category_encoders==2.1.0
+numpy==1.17.4
+tqdm==4.40.2
+kmodes==0.10.2
