Updated example of raw data. Option for class weights.

--- a/config.yml
+++ b/config.yml
@@ -92,8 +92,8 @@ TRAIN:
   EPOCHS: 300
   BATCH_SIZE: 1024
   POS_WEIGHT: 0.5
-  IMB_STRATEGY: 'class_weight'            # One of {'class_weight', 'random_oversample', 'smote', 'adasyn'}
-  METRIC_PREFERENCE: ['f1score', 'recall', 'precision', 'auc', 'loss']
+  IMB_STRATEGY: 'none'            # One of {'class_weight', 'random_oversample', 'smote', 'adasyn', 'none'}
+  METRIC_PREFERENCE: ['recall', 'f1score', 'precision', 'auc', 'loss']
   NUM_RUNS: 150
   THRESHOLDS: 0.5   # Can be changed to list of values in range [0, 1]
   PATIENCE: 15
