--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
+numpy==1.17.4
+category_encoders==2.1.0
+kmodes==0.10.2
+xgboost==1.3.3
+tqdm==4.40.2
+imbalanced_learn==0.6.1
+pandas==0.25.3
+dill==0.3.0
+lime==0.1.1.37
+scipy==1.4.1
+tensorflow_gpu==2.1.0
+tensorboard==2.1.1
+matplotlib==3.1.1
+joblib==0.14.1
 pyyaml==5.2
 scikit-learn==0.22.1
-scipy==1.4.1
-tensorboard==2.1.1
-tensorflow_gpu==2.1.0
-joblib==0.14.1
-pandas==0.25.3
-imbalanced_learn==0.6.1
-matplotlib==3.1.1
-lime==0.1.1.37
-dill==0.3.0
-category_encoders==2.1.0
-numpy==1.17.4
-tqdm==4.40.2
-kmodes==0.10.2
