Corrected static/dynamic feature split in RNN-MLP architecture

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ azure/.ipynb_checkpoints
 !results/models/.gitkeep
 !results/experiments/.gitkeep
 !results/predictions/.gitkeep
+inference/
+*.ipynb
 
 # Credentials to keep private
 config-private.yml
